--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
   "dependencies": {
     "@expo-google-fonts/oswald": "^0.2.3",
     "@fontsource/oswald": "^4.5.12",
+    "@jbuschke/formik-antd": "^1.5.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-router": "^5.3.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-text-mask": "^5.5.0",
+    "react-tooltip": "^5.13.0",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
