--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "clean": "^4.0.2",
     "cors": "^2.8.5",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
-    "react-router": "^5.3.0",
-    "react-router-dom": "^6.11.1",
+    "react-router": "^6.11.2",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-text-mask": "^5.5.0",
     "react-tooltip": "^5.13.0",
