--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clean": "^4.0.2",
     "cors": "^2.8.5",
     "formik": "^2.2.9",
+    "heroicons": "^2.0.18",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
