Add getting data with redux toolkit and RTK Query

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@expo-google-fonts/oswald": "^0.2.3",
     "@fontsource/oswald": "^4.5.12",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,15 +14,19 @@
     "cors": "^2.8.5",
     "formik": "^2.2.9",
     "heroicons": "^2.0.18",
+    "hover-carousel": "^1.1.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
+    "react-redux": "^8.1.3",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-text-mask": "^5.5.0",
     "react-tooltip": "^5.13.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
   },
